--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,100 +1,115 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <img
-        class="mx-auto h-10 w-auto"
-        src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-        alt="Your Company"
-      />
-      <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight">
-        Sign in to your account
-      </h2>
-    </div>
-  
-    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-      <div class="space-y-6">
-        <div>
-          <label for="email" class="block text-sm font-medium leading-6"
-            >Email address</label
-          >
-          <div class="mt-2">
-            <input
+<div class="container">
+
+  <div class="forms-container">
+    <!--------------------Signin Part------------------------->
+    <div class="signin-signup">
+      <form action="Main.html" class="sign-in-form">
+        <h2 class="title">Sign in</h2>
+        <img src="assets/image/Bookcrosser_logo.png" width="120px" alt="">
+
+
+        <div class="input-field">
+          <i class="fas fa-user"></i>
+          <input 
               [(ngModel)]="model.email"
               id="email"
               name="email"
               type="email"
               autocomplete="email"
               required
-              class="block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-            />
-          </div>
+              placeholder="Email"/>
         </div>
-  
-        <div>
-          <div class="flex items-center justify-between">
-            <label for="password" class="block text-sm font-medium leading-6"
-              >Password</label
-            >
-            <div class="text-sm">
-              <a
-                href="#"
-                class="font-semibold text-indigo-600 hover:text-indigo-500"
-                >Forgot password?</a
-              >
-            </div>
-          </div>
-          <div class="mt-2">
-            <input
-              [(ngModel)]="model.password"
-              id="password"
-              name="password"
-              type="password"
-              autocomplete="current-password"
-              required
-              class="block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-            />
-          </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input [(ngModel)]="model.password"
+          id="password"
+          name="password"
+          type="password"
+          autocomplete="current-password"
+          required
+          placeholder="Password"/>
         </div>
-  
-        <div>
-          <button
-            type="submit"
-            (click)="onSubmit()"
-            class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-          >
-            Sign in
-          </button>
+        <input type="submit" value="Login" class="btn solid" (click)="onSubmit()"/>
+        <p class="social-text">Follow us to get latest updates</p>
+        <div class="social-media">
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
         </div>
-      </div>
-      <button
-        (click)="loginGoogle()"
-        type="button"
-        class="mb-2 mr-2 mt-4 inline-flex items-center rounded-lg bg-[#4285F4] px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-[#4285F4]/90 focus:ring-4 focus:ring-[#4285F4]/50 dark:focus:ring-[#4285F4]/55"
-      >
-        <svg
-          class="-ml-1 mr-2 h-4 w-4"
-          aria-hidden="true"
-          focusable="false"
-          data-prefix="fab"
-          data-icon="google"
-          role="img"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 488 512"
-        >
-          <path
-            fill="currentColor"
-            d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"
-          ></path>
-        </svg>
-        Sign in with Google
-      </button>
-  
-      <p class="mt-10 text-center text-sm text-gray-500">
-        Not a member?
-        <a
-          href="#"
-          class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
-          >Start a 14 day free trial</a
-        >
-      </p>
+      </form>
+
+    <!--------------------Signup Part------------------------->
+
+      <form action="#" class="sign-up-form">
+        <h2 class="title">Sign up</h2>
+        <img src="assets/image/Bookcrosser_logo.png" width="120px" alt="">
+        <div class="input-field">
+          <i class="fas fa-user"></i>
+          <input type="text" placeholder="Username" required/>
+        </div>
+        <div class="input-field">
+          <i class="fas fa-envelope"></i>
+          <input type="email" placeholder="Email" required/>
+        </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input type="password" placeholder="Password" required/>
+        </div>
+        <input type="submit" class="btn" value="Sign up" />
+        <p class="social-text">Follow us to get latest updates</p>
+        <div class="social-media">
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+      </form>
     </div>
   </div>
+
+  <div class="panels-container">
+    <div class="panel left-panel">
+      <div class="content">
+        <h3>New here ?</h3>
+        <p>
+          "Join the ultimate literary playground! Swap books, discover new favorites, and be part of a vibrant community of book lovers."
+        </p>
+        <button class="btn transparent" id="sign-up-btn">
+          Sign up
+        </button>
+      </div>
+      <img src="assets/image/Signinmages/login.png" class="image" alt="" />
+    </div>
+    <div class="panel right-panel">
+      <div class="content">
+        <h3>One of us ?</h3>
+        <p>
+          "Welcome back to your literary haven! Sign in now to continue your bookish journey with us. If you're already a member, simply log in below."
+        </p>
+        <button class="btn transparent" id="sign-in-btn">
+          Log in
+        </button>
+      </div>
+      <img src="assets/image/Signinmages/register.svg" class="image" alt="" />
+    </div>
+  </div>
+</div>
+
+
