--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <main>
 
-    <header class="site-header">
+    <div class="site-header">
         <div class="container">
             <div class="row">
 
@@ -13,14 +13,12 @@
 
             </div>
         </div>
-    </header>
-
-
+    </div>
 
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-               <img src="image/Bookcrosser_logo.png" alt="Logo" width="70px"> BookCrosser
+               <img src="assets/image/Bookcrosser_logo.png" alt="Logo" width="70px"> BookCrosser
             </a>
 
 
@@ -157,7 +155,7 @@
            <div class="row">
             <div class="col">
                 <div class="card shadow" style="width: 300px;">
-                    <img src="image/books/Shuggie.webp" class="card-img-top" alt="..." width="50px" height="300px">
+                    <img src="assets/image/books/Shuggie.webp" class="card-img-top" alt="..." width="50px" height="300px">
                     <div class="card-body">
                       <h5 class="card-title">Book Name : Shuggie Bain</h5>
                       <p>Author : <Span>Douglas Stuart</Span></p>
@@ -174,7 +172,7 @@
 
             <div class="col">
                 <div class="card shadow" style="width: 300px;">
-                    <img src="image/books/WhiteNoise.webp" class="card-img-top" alt="..." width="50px" height="300px">
+                    <img src="assets/image/books/WhiteNoise.webp" class="card-img-top" alt="..." width="50px" height="300px">
                     <div class="card-body">
                       <h5 class="card-title">Book Name : White Noise</h5>
                       <p>Author : <Span>Don DeLillo</Span></p>
@@ -191,7 +189,7 @@
 
             <div class="col">
                 <div class="card shadow" style="width: 300px;">
-                    <img src="image/books/Afinebalance.jpg" class="card-img-top" alt="..." width="50px" height="300px">
+                    <img src="assets/image/books/Afinebalance.jpg" class="card-img-top" alt="..." width="50px" height="300px">
                     <div class="card-body">
                       <h5 class="card-title">Book Name : A Fine Balance</h5>
                       <p>Author : <Span>Rohinton Mistry</Span></p>
@@ -278,7 +276,7 @@
 
             <div class="col">
                 <div class="card shadow" style="width: 300px;">
-                    <img src="image/books/Catcher.jpg" class="card-img-top" alt="..." width="50px" height="300px">
+                    <img src="assets/image/books/Catcher.jpg" class="card-img-top" alt="..." width="50px" height="300px">
                     <div class="card-body">
                       <h5 class="card-title">Book Name : The Catcher in the Rye</h5>
                       <p>Author : <Span> J. D. Salinger</Span></p>
@@ -309,7 +307,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="image/books/Shuggie.webp" alt="" class="img-fluid">
+                        <img src="assets/image/books/Shuggie.webp" alt="" class="img-fluid">
                     </div>
                     <div class="col-md-6">
                         <h4>Book Name :Shuggie Bain</h4>
@@ -318,7 +316,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> 
 
                         <h4>Owner Name : Peter</h4>
-                        <i class="bi bi-envelope-fill"><p>jhon@gmail.com</p></i>
+                        <i class="bi bi-envelope-fill"><p>jhongmail.com</p></i>
                         <i class="bi bi-telephone-fill"><p>+371 22890325</p></i>
                     </div>
                 </div>
@@ -344,6 +342,7 @@
 </main>
 
 <br><br>
+
 <footer class="site-footer">
 <div class="site-footer-top">
     <div class="container">
