--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,16 +32,16 @@
         <input type="submit" value="Login" class="btn solid" (click)="onSubmit()"/>
         <p class="social-text">Follow us to get latest updates</p>
         <div class="social-media">
-          <a href="#" class="social-icon">
+          <a class="social-icon">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="social-icon">
+          <a class="social-icon">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="social-icon">
+          <a class="social-icon">
             <i class="fab fa-google"></i>
           </a>
-          <a href="#" class="social-icon">
+          <a class="social-icon">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
