--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,6 +30,12 @@
           placeholder="Password"/>
         </div>
         <input type="submit" value="Login" class="btn solid" (click)="onSubmit()"/>
+
+        <!-- Display error message if errorMessage is not null -->
+        <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+          {{ errorMessage }}
+        </div>
+
         <p class="social-text">Follow us to get latest updates</p>
         <div class="social-media">
           <a class="social-icon">
